fix bug click to to What is ezchain

--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
                             <p>EZChain is a multi-blockchain platform with high performance, low cost and optimized
                                 system in the direction of the simplest for end users. The main applications of EZChain
                                 are:</p>
-                            <a href="#" class="d-flex flex-row">
+                            <a class="d-flex flex-row">
                                 <span>+</span>
                                 <div style="flex:1">Create public blockchain or private blockchain</div>
                             </a>
-                            <a href="#" class="d-flex flex-row"><span>+</span>
+                            <a class="d-flex flex-row"><span>+</span>
                                 <div style="flex:1">Build decentralized applications (Dapp)</div>
                             </a>
-                            <a href="#" class="d-flex flex-row"><span>+</span>
+                            <a class="d-flex flex-row"><span>+</span>
                                 <div style="flex:1">Create decentralized assets (NFTs/Tokens)</div>
                             </a>
                         </div>
@@ -473,7 +473,7 @@
                                     <div style="width: 158px;">
                                         <img src="./images/logo.png" alt="" style="max-width: 100%;">
                                     </div>
-                                    <div>&gt; 4,500 tps</div>
+                                    <div>4,500 tps</div>
                                     <div>&lt; 2 secs</div>
                                     <div>Proof of Stake</div>
                                     <div>80%</div>
