frontend create Join the EZChain Community.

--- a/index.html
+++ b/index.html
@@ -66,15 +66,6 @@
                 <div class="collapse navbar-collapse text-light" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto me-2">
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" href="#about">Solutions <svg width="12" height="7"
-                                    viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M5.94975 6.22486L5.59619 6.57842L5.94975 6.93197L6.3033 6.57842L5.94975 6.22486ZM10.5459 0.921563L5.59619 5.87131L6.3033 6.57842L11.253 1.62867L10.5459 0.921563ZM6.3033 5.87131L1.35355 0.921563L0.646447 1.62867L5.59619 6.57842L6.3033 5.87131Z"
-                                        fill="#4F4F4F" />
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link me-lg-3" target="_blank" href="https://ezchain.gitbook.io/">Developers
                             </a>
                         </li>
@@ -92,7 +83,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" target="_blank"
-                                href="https://explorer.ezchain.com/validators">Validator </a>
+                                href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#">Community</a>
@@ -559,6 +550,35 @@
                     </div>
                 </div>
             </div> -->
+            <div class="container mt-4 box_container_community">
+                <div class="box_community">
+                    <div class="layer_1"></div>
+                    <div class="layer_2">
+                        <div class="content_layer_2">
+                            <div class="left_layer_2">
+                                <h1> Join the EZChain Community. </h1>
+                            </div>
+                            <div class="right_layer-2">
+                                <div class="container_icon">
+                                    <a href="https://www.facebook.com/ezchain.official" target="_blank">
+                                        <img src="./images/facebook_icon.svg" alt="facebook_icon">
+                                    </a>
+                                    <a href="https://t.me/EZChainOfficial" target="_blank">
+                                        <img src="./images/telegram_icon.svg" alt="telegram_icon">
+                                    </a>
+                                    <a href="https://www.youtube.com/channel/UCOppDzCtBigB7yWM3SFFUZA" target="_blank">
+                                        <img src="./images/youtube_icon.svg" alt="youtube_icon">
+                                    </a>
+                                    <a href="https://twitter.com/ezchainoffical" target="_blank">
+                                        <img src="./images/twiter_icon.svg" alt="twiter_icon">
+                                    </a>
+                                </div>
+                                <h4>Blockchain 3.0 for easy life</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="section-5-1">
                 <div class="container">
                     <h1>Blog & News</h1>
