--- a/index.html
+++ b/index.html
@@ -73,13 +73,18 @@
                             <a class="nav-link me-lg-3" target="_blank" href="https://wallet.ezchain.com/"> Web
                                 wallet</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank" href="https://cchain-explorer.ezchain.com/">
-                                Explorer (C-chain)</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank" href="https://explorer.ezchain.com/"> Explorer
-                                (X-Chain & P-Chain)</a>
+                        <li class="nav-item nav-link-explorer">
+                            <a class="nav-link me-lg-3 big-link" href="#">Explorer</a>
+                            <ul class="sub-menu-explorer">
+                                <li class="nav-items">
+                                    <a class="nav-link me-lg-3" target="_blank"
+                                        href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
+                                </li>
+                                <li class="nav-items">
+                                    <a class="nav-link me-lg-3" target="_blank" href="https://explorer.ezchain.com/">
+                                        Explorer (X-Chain & P-Chain)</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" target="_blank"
@@ -88,7 +93,7 @@
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#">Community</a>
                         </li>
-                        <li class="nav-item d-mb-none">
+                        <li class="nav-item d-mb-none ds-none">
                             <a class="nav-link me-lg-3" style="display: inline-block; padding-top: 4px;"
                                 href="#roadmap"><svg width="18" height="33" viewBox="0 0 18 33" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -96,7 +101,7 @@
                                 </svg>
                             </a>
                         </li>
-                        <li class="nav-item d-mb-none">
+                        <li class="nav-item d-mb-none ds-none">
                             <a class="nav-link me-lg-3" href="#roadmap"><svg width="20" height="20" viewBox="0 0 20 20"
                                     fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -560,16 +565,16 @@
                             </div>
                             <div class="right_layer-2">
                                 <div class="container_icon">
-                                    <a href="https://www.facebook.com/ezchain.official" target="_blank">
+                                    <!-- <a href="#" target="_blank">
                                         <img src="./images/facebook_icon.svg" alt="facebook_icon">
-                                    </a>
+                                    </a> -->
                                     <a href="https://t.me/EZChainOfficial" target="_blank">
                                         <img src="./images/telegram_icon.svg" alt="telegram_icon">
                                     </a>
                                     <a href="https://www.youtube.com/channel/UCOppDzCtBigB7yWM3SFFUZA" target="_blank">
                                         <img src="./images/youtube_icon.svg" alt="youtube_icon">
                                     </a>
-                                    <a href="https://twitter.com/ezchainoffical" target="_blank">
+                                    <a href="https://twitter.com/EZChainOfficial" target="_blank">
                                         <img src="./images/twiter_icon.svg" alt="twiter_icon">
                                     </a>
                                 </div>
