fix bug link to-top Community

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" href="#">Community</a>
+                            <a class="nav-link me-lg-3" href="#comunity">Community</a>
                         </li>
                         <li class="nav-item d-mb-none ds-none">
                             <a class="nav-link me-lg-3" style="display: inline-block; padding-top: 4px;"
@@ -484,6 +484,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="comunity" class="mt-4"></div>
                 </div>
             </div>
             <!-- <div class="section-5">
