fix bug top menu

--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@
                         <li class="nav-item nav-link-explorer">
                             <a class="nav-link me-lg-3 big-link" href="#">Explorer</a>
                             <ul class="sub-menu-explorer">
-                                <li class="nav-items">
-                                    <a class="nav-link me-lg-3" target="_blank"
-                                        href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
-                                </li>
-                                <li class="nav-items">
-                                    <a class="nav-link me-lg-3" target="_blank" href="https://explorer.ezchain.com/">
-                                        Explorer (X-Chain & P-Chain)</a>
-                                </li>
+                                <div class="explorer_chain">
+                                    <li class="nav-items">
+                                        <a class="nav-link me-lg-3" target="_blank"
+                                            href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
+                                    </li>
+                                    <li class="nav-items">
+                                        <a class="nav-link me-lg-3" target="_blank" href="https://explorer.ezchain.com/">
+                                            Explorer (X-Chain & P-Chain)</a>
+                                    </li>
+                                </div>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -284,117 +286,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="row row-2 d-lg-none">
-                        <h1>EZChain Solutions</h1>
-                        <div>
-                            <div class="col-md-12">
-                                <div class="righ col-md-12">
-                                    <div class="img">
-                                        <img src="./images/s2-2-1.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="left col-md-12">
-                                    <div class="title">Smart Contract Blockchain</div>
-                                    <div class="desc">ABC là sàn giao dịch phi tập trung giúp cho người dùng dễ dàng giao dịch các token trên blockchain của EZChain và có khả năng giao dịch xuyên chuỗi với Ethereum, Solana, Binana Smart Chain…
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="left col-md-12">
-                                    <div class="img" style="margin-left: 140px;">
-                                        <img src="./images/s2-2-2.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="right col-md-12">
-                                    <div class="title">Decentralized Governance</div>
-                                    <div class="desc">BCD là sàn giao dịch các tài sản NFT giúp cho các nhà sáng tạo, nghệ sỹ và các tổ chức có thể dễ dàng đưa các tài sản đến với thị trường. BCD cung cấp cho thị trường nhiều công cụ tuyệt vời để
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="right col-md-12">
-                                    <div class="img">
-                                        <img src="./images/s2-2-3.png" alt="">
-                                    </div>
-                                </div>
-
-                                <div class="left col-md-12">
-                                    <div class="title">Non-Fungible Tokens (NFTs)
-                                    </div>
-                                    <div class="desc">ABC là sàn giao dịch phi tập trung giúp cho người dùng dễ dàng giao dịch các token trên blockchain của EZChain và có khả năng giao dịch xuyên chuỗi với Ethereum, Solana, Binana Smart Chain…
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="left col-md-12">
-                                    <div class="img" style="margin-left: 140px;">
-                                        <img src="./images/s2-2-4.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="right col-md-12">
-                                    <div class="title">Private Blockchain
-                                    </div>
-                                    <div class="desc">BCD là sàn giao dịch các tài sản NFT giúp cho các nhà sáng tạo, nghệ sỹ và các tổ chức có thể dễ dàng đưa các tài sản đến với thị trường. BCD cung cấp cho thị trường nhiều công cụ tuyệt vời để
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="row row-2 d-mb-none">
-                        <h1>EZChain Solutions</h1>
-                        <div>
-                            <div class="col-md-12">
-                                <div class="left">
-                                    <div class="title">Smart Contract Blockchain</div>
-                                    <div class="desc">ABC là sàn giao dịch phi tập trung giúp cho người dùng dễ dàng giao dịch các token trên blockchain của EZChain và có khả năng giao dịch xuyên chuỗi với Ethereum, Solana, Binana Smart Chain…
-                                    </div>
-                                </div>
-                                <div class="right">
-                                    <div class="img">
-                                        <img src="./images/s2-2-1.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="left">
-                                    <div class="img" style="margin-left: 140px;">
-                                        <img src="./images/s2-2-2.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="right">
-                                    <div class="title">Decentralized Governance</div>
-                                    <div class="desc">BCD là sàn giao dịch các tài sản NFT giúp cho các nhà sáng tạo, nghệ sỹ và các tổ chức có thể dễ dàng đưa các tài sản đến với thị trường. BCD cung cấp cho thị trường nhiều công cụ tuyệt vời để
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="left">
-                                    <div class="title">Non-Fungible Tokens (NFTs)
-                                    </div>
-                                    <div class="desc">ABC là sàn giao dịch phi tập trung giúp cho người dùng dễ dàng giao dịch các token trên blockchain của EZChain và có khả năng giao dịch xuyên chuỗi với Ethereum, Solana, Binana Smart Chain…
-                                    </div>
-                                </div>
-                                <div class="right">
-                                    <div class="img">
-                                        <img src="./images/s2-2-3.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="left">
-                                    <div class="img" style="margin-left: 140px;">
-                                        <img src="./images/s2-2-4.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="right">
-                                    <div class="title">Private Blockchain
-                                    </div>
-                                    <div class="desc">BCD là sàn giao dịch các tài sản NFT giúp cho các nhà sáng tạo, nghệ sỹ và các tổ chức có thể dễ dàng đưa các tài sản đến với thị trường. BCD cung cấp cho thị trường nhiều công cụ tuyệt vời để
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
             <div class="section-4">
@@ -487,75 +378,6 @@
                     <div id="comunity" class="mt-4"></div>
                 </div>
             </div>
-            <!-- <div class="section-5">
-                <div class="container">
-                    <div class="row">
-                        <h1>What is EZC? <span>EZC is Thanh toán phí mạng</span></h1>
-                        <div class="list">
-                            <div class="col-md-6">
-                                <div>
-                                    <div class="left">
-                                        <img src="./images/s5-1.png" alt="">
-                                    </div>
-                                    <div class="right">
-                                        <div class="title">Thanh toán phí mạng</div>
-                                        <div class="desc">
-                                            EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. 
-                                        </div>
-                                        <div class="plus">+</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div>
-                                    <div class="left">
-                                        <img src="./images/s5-2.png" alt="">
-                                    </div>
-                                    <div class="right">
-                                        <div class="title">Staking
-                                        </div>
-                                        <div class="desc">
-                                            EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. 
-
-                                        </div>
-                                        <div class="plus">+</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div>
-                                    <div class="left">
-                                        <img src="./images/s5-3.png" alt="">
-                                    </div>
-                                    <div class="right">
-                                        <div class="title">Lưu trữ giá trị
-                                        </div>
-                                        <div class="desc">
-                                            EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. 
-                                        </div>
-                                        <div class="plus">+</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div>
-                                    <div class="left">
-                                        <img src="./images/s5-4.png" alt="">
-                                    </div>
-                                    <div class="right">
-                                        <div class="title">Payment for anything
-                                        </div>
-                                        <div class="desc">
-                                            EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. EZC là đồng tiền điện tử phi tập trung dùng để tích luỹ giá trị cho cộng đồng người dùng. 
-                                        </div>
-                                        <div class="plus">+</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="container mt-4 box_container_community">
                 <div class="box_community">
                     <div class="layer_1"></div>
@@ -566,9 +388,6 @@
                             </div>
                             <div class="right_layer-2">
                                 <div class="container_icon">
-                                    <!-- <a href="#" target="_blank">
-                                        <img src="./images/facebook_icon.svg" alt="facebook_icon">
-                                    </a> -->
                                     <a href="https://t.me/EZChainOfficial" target="_blank">
                                         <img src="./images/telegram_icon.svg" alt="telegram_icon">
                                     </a>
