--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                             href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
                                     </li>
                                     <li class="nav-items">
-                                        <a class="nav-link me-lg-3" target="_blank" href="https://explorer.ezchain.com/">
-                                            Explorer (X-Chain & P-Chain)</a>
+                                        <a class="nav-link me-lg-3" target="_blank"
+                                            href="https://explorer.ezchain.com/"> Explorer (X-Chain & P-Chain)</a>
                                     </li>
                                 </div>
                             </ul>
@@ -91,6 +91,9 @@
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" target="_blank"
                                 href="https://explorer.ezchain.com/validators">Validators </a>
+                        </li>
+                        <li class="nav-item nav-link-explorer">
+                            <a class="nav-link me-lg-3 big-link" href="./guides.html">EZChain Guides</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#comunity">Community</a>
